rinutils' News File
===================
Shlomi Fish <shlomif@cpan.org>
:Date: 2019-11-17
:Revision: $Id$

0.10.0       ( 06 Sep 2021 )
----------------------------

* Fix the filenames in +**.h+ and add SPDX identifiers.
* Thanks to pert from +#debian-mentoring+ .

0.8.0       ( 30 Nov 2020 )
----------------------------

* Enhance and expand the README.
** https://lists.debian.org/debian-devel-games/2020/03/msg00008.html .

0.6.0       ( 24 Sep 2020 )
----------------------------

* Made the WITH_TEST_SUITE option off by default to avoid depending on cmocka
( https://github.com/shlomif/fortune-mod/issues/44 )

* Remove unused code and other cleanups.

0.4.1       ( 20 Jul 2020 )
----------------------------

* Minor cleanups: convert comments to +//+.

0.4.0       ( 27 Mar 2020 )
----------------------------

* Convert the cmake build sys to +INCLUDE(GNUInstallDirs)+ - thanks to asturm.

* Add Travis-CI testing.

0.2.0       ( 17 Nov 2019 )
----------------------------

* First release.